Updated Netlify website

--- a/index.html
+++ b/index.html
@@ -3637,6 +3637,7 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
     
 
     <div class="mb-3">
+<!--
       <form name="contact" method="POST" action="https://formspree.io/patternizer@proton.me">
         <div class="form-group form-inline">
           <label class="sr-only" for="inputName">Name</label>
@@ -3652,6 +3653,21 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
         </div>
         <button type="submit" class="btn btn-outline-primary px-3 py-2">Send</button>
       </form>
+--> 
+
+<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xbjejjew" method="post">
+  <fieldset id="fs-frm-inputs">
+    <label for="full-name">Name</label>
+    <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+    <label for="email-address">Email</label>
+    <input type="email" name="_replyto" id="email-address" placeholder="Email" required="">
+    <label for="message">Message</label>
+    <textarea rows="5" name="message" id="message" placeholder="Message" required=""></textarea>
+    <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+  </fieldset>
+  <input type="submit" value="Submit">
+</form>
+
     </div>
     
 
@@ -3659,7 +3675,7 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
 
       <li>
         <i class="fa-li fas fa-phone fa-2x" aria-hidden="true"></i>
-        <span id="person-telephone" itemprop="telephone"><a href="tel:&#43;44%280%291603%20456161">&#43;44(0)1603 456161</a></span>
+        <span id="person-telephone" itemprop="telephone"><a href="tel:&#43;44%280%291603%20456161">&#43;44(0)1603 593808</a></span>
       </li>
       <li>
         <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
