--- a/index.html
+++ b/index.html
@@ -3638,7 +3638,7 @@ the separation of the dust portion in detected dust mixtures, and the averaging 
 
     <div class="mb-3">
 		
-      <form name="contact" method="POST" action="https://formspree.io/patternizer@proton.me">
+      <form name="contact" method="POST" action="https://formspree.io/f/xbjejjew">
         <div class="form-group form-inline">
           <label class="sr-only" for="inputName">Name</label>
           <input type="text" name="name" class="form-control w-100" id="inputName" placeholder="Name" required>
