--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.
       I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
 	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and computed climate stripes for the Age of Mammals from 66 million years ago for 
-	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I have autism and am fluent in Greek and Spanish and like to
-	  play blindfold chess.
+	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like gravel biking, 
+	  playing blindfold chess and a big surdo. I have autism and am not a puzzle to be solved.
 	  </p>
 	        
     <div class="row">
