Updated Netlify website

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
 	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and computed climate stripes for the Age of Mammals from 66 million years ago for 
 	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like gravel biking, 
-	  playing blindfold chess and a big surdo. I have autism and am not a puzzle to be solved.
+	  playing blindfold chess and a big surdo. I have autism and I'm not a puzzle to be solved although <a href="ttps://patternizer.github.io/img/impossible-jigsaw.jpg" target="_blank">this</a> might help.
 	  </p>
 	        
     <div class="row">
