--- a/index.html
+++ b/index.html
@@ -770,16 +770,13 @@
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">COVID-19</a>
-                <a href="#" data-filter=".js-id-opencv2" class="btn btn-primary btn-lg">OpenCV2</a>
                 <a href="#" data-filter=".js-id-worldlines" class="btn btn-primary btn-lg">Quantum Poetry</a>
-                <a href="#" data-filter=".js-id-ops_sat" class="btn btn-primary btn-lg">OPS-SAT</a>
                 <a href="#" data-filter=".js-id-fiduceo" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
                 <a href="#" data-filter=".js-id-RSSA_ga" class="btn btn-primary btn-lg">RSSA_ga</a>
                 <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">SOLAR-UV</a>
-                <a href="#" data-filter=".js-id-aeromap" class="btn btn-primary btn-lg">AEROMAP</a>
-                <a href="#" data-filter=".js-id-sagan" class="btn btn-primary btn-lg">SAGAN</a>
+                <a href="#" data-filter=".js-id-aeromap" class="btn btn-primary btn-lg">Marie-Curie IEF AEROMAP</a>
               
             </div>
           </div>
@@ -905,14 +902,6 @@
 .</p>
 </div>
 
-<div class="col-lg-12 project-item isotope-item js-id-opencv2" itemscope itemtype="http://schema.org/CreativeWork">
-  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
-  <span class="project-title">
-    <a href="https://github.com/patternizer/birdpy" target="_blank" rel="noopener" itemprop="url">Bird Motion Tracking</a>
-  </span>
-  <p class="project-summary">Development version of code to convert .mov clips of birds in flight to ornitographic trajectories inspired by the work of http://www.xavibou.com/</p>
-</div>
-
 <div class="col-lg-12 project-item isotope-item js-id-RSSA_ga" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
@@ -927,14 +916,6 @@
     <a href="https://github.com/patternizer/solar_nn" target="_blank" rel="noopener" itemprop="url">Solar NN</a>
   </span>
   <p class="project-summary">Neural network radiative transfer solver for generation of surface solar spectral radiance maps and UV products </p>
-</div>
-
-<div class="col-lg-12 project-item isotope-item js-id-ops_sat" itemscope itemtype="http://schema.org/CreativeWork">
-  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
-  <span class="project-title">
-    <a href="https://github.com/patternizer/villageApp" target="_blank" rel="noopener" itemprop="url">OPS-SAT</a>
-  </span>
-  <p class="project-summary">Remote sensing of weather satellites with a quadrifilar helix (QFH) antenna </p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
