--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="" target="_blank" rel="noopener" itemprop="url">GloSAT LAT</a>
+    <a href="https://glosat.org/" target="_blank" rel="noopener" itemprop="url">GloSAT LAT</a>
   </span>
   <p class="project-summary">Global land surface air temperature update to CRUTEM5 using local expectation Kriging (LEK)</p>
 </div>
