--- a/index.html
+++ b/index.html
@@ -770,6 +770,7 @@
                 
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-glosat" class="btn btn-primary btn-lg">NERC GloSAT</a>
+                <a href="#" data-filter=".js-id-ncc" class="btn btn-primary btn-lg">NCC Climate Mural for our Times</a>
                 <a href="#" data-filter=".js-id-fiduceo" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
@@ -794,6 +795,13 @@
   <p class="project-summary">Global land surface air temperature update to CRUTEM5 using local expectation Kriging (LEK)</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-ncc" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank" rel="noopener" itemprop="url">Norwich City Council "Climate Mural for our Times"</a>
+  </span>
+  <p class="project-summary">Science informed art - a municipal climate mural for the Cenozoic from 66 million years ago out to 2200 CE</p>
+</div>
 
 
 
