--- a/index.html
+++ b/index.html
@@ -775,10 +775,9 @@
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
                 <a href="#" data-filter=".js-id-aeromap" class="btn btn-primary btn-lg">Marie-Curie IEF AEROMAP</a>
-                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">COVID-19</a>
+                <a href="#" data-filter=".js-id-dash" class="btn btn-primary btn-lg">COVID-19 apps</a>
                 <a href="#" data-filter=".js-id-worldlines" class="btn btn-primary btn-lg">Quantum Poetry</a>
-                <a href="#" data-filter=".js-id-RSSA_ga" class="btn btn-primary btn-lg">RSSA_ga</a>
-                <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">SOLAR-UV</a>
+                <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">H2020 GEO-CRADLE Solar-NN & UV-products</a>
               
             </div>
           </div>
@@ -800,7 +799,7 @@
   <span class="project-title">
     <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank" rel="noopener" itemprop="url">Norwich City Council "Climate Mural for our Times"</a>
   </span>
-  <p class="project-summary">Science informed art - a municipal climate mural for the Cenozoic from 66 million years ago out to 2200 CE</p>
+  <p class="project-summary">Science informed art - a municipal climate change mural for the Cenozoic era installed in Norwich City Hall</p>
 </div>
 
 
@@ -924,14 +923,6 @@
 .</p>
 </div>
 
-<div class="col-lg-12 project-item isotope-item js-id-RSSA_ga" itemscope itemtype="http://schema.org/CreativeWork">
-  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
-  <span class="project-title">
-    <a href="https://github.com/patternizer/RSSA_ga" target="_blank" rel="noopener" itemprop="url">GA Optimisation of SSA in R</a>
-  </span>
-  <p class="project-summary">Optimisation of SSA in R using genetic programming</p>
-</div>
-
 <div class="col-lg-12 project-item isotope-item js-id-solar_nn" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
@@ -940,18 +931,18 @@
   <p class="project-summary">Neural network radiative transfer solver for generation of surface solar spectral radiance maps and UV products </p>
 </div>
 
-<div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-covid" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/Coronavirus_CounterMeasures" target="_blank" rel="noopener" itemprop="url">Global counter-measures update</a>
+    <a href="https://github.com/patternizer/Coronavirus_CounterMeasures" target="_blank" rel="noopener" itemprop="url">COVID 2019 - Global counter-measures update</a>
   </span>
   <p class="project-summary">Coronavirus global lockdown status daily dashboard </p>
 </div>
 
-<div class="col-lg-12 project-item isotope-item js-id-dash" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-covid" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/COVID-19-operational-forecast" target="_blank" rel="noopener" itemprop="url">Coronavirus MCMC hindcast/forecast</a>
+    <a href="https://github.com/patternizer/COVID-19-operational-forecast" target="_blank" rel="noopener" itemprop="url">COVID 2019 - MCMC hindcast/forecast model</a>
   </span>
   <p class="project-summary">Coronavirus MCMC hindcast/forecast dashboard </p>
 </div>
