--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-covid" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/Coronavirus_CounterMeasures" target="_blank" rel="noopener" itemprop="url">COVID 2019 - Global counter-measures update</a>
+    <a href="https://github.com/patternizer/Coronavirus_CounterMeasures" target="_blank" rel="noopener" itemprop="url">COVID 2019 Global counter-measures update app</a>
   </span>
   <p class="project-summary">Coronavirus global lockdown status daily dashboard </p>
 </div>
@@ -942,7 +942,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-covid" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/COVID-19-operational-forecast" target="_blank" rel="noopener" itemprop="url">COVID 2019 - MCMC hindcast/forecast model</a>
+    <a href="https://github.com/patternizer/COVID-19-operational-forecast" target="_blank" rel="noopener" itemprop="url">COVID 2019 MCMC hindcast/forecast model app</a>
   </span>
   <p class="project-summary">Coronavirus MCMC hindcast/forecast dashboard </p>
 </div>
@@ -950,7 +950,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-worldlines" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/quantum_poetry" target="_blank" rel="noopener" itemprop="url">Quantum Poetry</a>
+    <a href="https://github.com/patternizer/quantum_poetry" target="_blank" rel="noopener" itemprop="url">Quantum Poetry app</a>
   </span>
   <p class="project-summary"> Python implementation of World Lines quantum poetry algorithm in collaboration with 
 <a href="https://www.amycatanzano.com" target="_blank" rel="noopener" itemprop="url">Professor Amy Catanzano</a>
