--- a/index.html
+++ b/index.html
@@ -931,6 +931,14 @@
   <p class="project-summary">Neural network radiative transfer solver for generation of surface solar spectral radiance maps and UV products </p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-solar_nn" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank" rel="noopener" itemprop="url">Solar NN</a>
+  </span>
+  <p class="project-summary">Mapping Bio-UV products from space</p>
+</div>
+
 <div class="col-lg-12 project-item isotope-item js-id-covid" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
