--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
                 <a href="#" data-filter=".js-id-aeromap" class="btn btn-primary btn-lg">Marie-Curie IEF AEROMAP</a>
-                <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">H2020 GEO-CRADLE Solar-NN & UV-products</a>
+                <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">H2020 GEO-CRADLE Solar & UV satellite products</a>
                 <a href="#" data-filter=".js-id-worldlines" class="btn btn-primary btn-lg">Quantum Poetry app</a>
                 <a href="#" data-filter=".js-id-covid" class="btn btn-primary btn-lg">COVID-19 apps</a>
               
