--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
                 <a href="#" data-filter=".js-id-aeromap" class="btn btn-primary btn-lg">Marie-Curie IEF AEROMAP</a>
-                <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">H2020 GEO-CRADLE Solar & UV satellite products</a>
+                <a href="#" data-filter=".js-id-solar_nn" class="btn btn-primary btn-lg">H2020 GEO-CRADLE </a>
                 <a href="#" data-filter=".js-id-worldlines" class="btn btn-primary btn-lg">Quantum Poetry app</a>
                 <a href="#" data-filter=".js-id-covid" class="btn btn-primary btn-lg">COVID-19 apps</a>
               
@@ -934,7 +934,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-solar_nn" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank" rel="noopener" itemprop="url">Solar NN</a>
+    <a href="https://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank" rel="noopener" itemprop="url">Satellite bio-UV products </a>
   </span>
   <p class="project-summary">Mapping Bio-UV products from space</p>
 </div>
