--- a/index.html
+++ b/index.html
@@ -928,13 +928,13 @@
   <span class="project-title">
     <a href="https://github.com/patternizer/solar_nn" target="_blank" rel="noopener" itemprop="url">Solar NN</a>
   </span>
-  <p class="project-summary">Neural network radiative transfer solver for generation of surface solar spectral radiance maps and UV products </p>
+  <p class="project-summary">Neural network radiative transfer solver to compute surface spectral solar radiance (GHI, DHI and DNI) </p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-solar_nn" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank" rel="noopener" itemprop="url">Satellite bio-UV products </a>
+    <a href="https://blogs.reading.ac.uk/weather-and-climate-at-reading/2019/mapping-bio-uv-products-from-space/" target="_blank" rel="noopener" itemprop="url">Satellite Bio-UV products </a>
   </span>
   <p class="project-summary">Mapping Bio-UV products from space</p>
 </div>
