--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
   <span class="project-title">
     <a href="https://glosat.org/" target="_blank" rel="noopener" itemprop="url">GloSAT LAT</a>
   </span>
-  <p class="project-summary">Global land surface air temperature update to CRUTEM5 using local expectation Kriging (LEK)</p>
+  <p class="project-summary">Global land surface air temperature acquisition update to CRUTEM5 and local expectation Kriging (LEK) for 1781-2022</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-ncc" itemscope itemtype="http://schema.org/CreativeWork">
@@ -800,12 +800,7 @@
     <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank" rel="noopener" itemprop="url">Norwich City Council "Climate Mural for our Times"</a>
   </span>
   <p class="project-summary">Science informed art - a municipal climate change mural for the Cenozoic era installed in Norwich City Hall</p>
-</div>
-
-
-
-
-      
+</div>      
 
 <div class="col-lg-12 project-item isotope-item js-id-aeromap" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
