--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@
     </div>    
   </div>
 <div class="ml-3">    
-    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2006_estallidos4.pdf">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2006_estallidos4.pdf" target="_blank" rel="noopener">
       <img src="/talk/estallidos-iv/featured.png" itemprop="image">
     </a>    
   </div>
