--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
   <div class="media-body">
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2006_estallidos4.pdf" itemprop="url">Abell 39 – the benchmark nebula for 3D photoionisation modelling</a>
+      <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2006_estallidos4.pdf" itemprop="url" target="_blank" rel="noopener">Abell 39 – the benchmark nebula for 3D photoionisation modelling</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
       ESTALLIDOS-IV progress update
