--- a/index.html
+++ b/index.html
@@ -985,6 +985,116 @@
   <div class="col-12 col-lg-8">
 
 
+
+
+
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>Norwich City Hall climate mural progress update</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP3 Outreach
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          Oct 13, 2022            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">University of York, UK</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2022_GloSAT_WP3_outreach.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2022_GloSAT_WP3_outreach.pdf">
+      <img src="/talk/ncc/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
+
+
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>Rate of retreat of the Arctic sea-ice boundary from reanalysis</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP1 sea-ice reanalysis
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          May 5, 2021            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">UK Polar Network ECC (online)</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf">
+      <img src="/talk/budyko-calculation/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
+
+
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>How good is 20th Century Reanalysis at recreating observations during the Ulysses Storm >100 years ago</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP1 reanalysis pressure altitude correction
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          May 25, 2021            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">CRU/UEA Datasets Meeting (online)</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_WP1_ben-nevis_reanalysis.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_WP1_ben-nevis_reanalysis.pdf">
+      <img src="/talk/ben-nevis/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
   <div class="media-body">
     <h3 class="article-title mb-0 mt-0" itemprop="name">
