--- a/index.html
+++ b/index.html
@@ -1022,29 +1022,29 @@
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
   <div class="media-body">
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a>Rate of retreat of the Arctic sea-ice boundary from reanalysis</a>
+      <a>Local expectation from Kriging to aid with LSAT station homogenization and estimation of normals</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
-      NERC GloSAT WP1 sea-ice reanalysis
+      NERC GloSAT WP2 Homogenisation
     </div>
     <div class="stream-meta article-metadata">
       <div>
         <span itemprop="startDate">
-          May 5, 2021            
+          Sep 7, 2021            
         </span>
         <span class="middot-divider"></span>
-        <span itemprop="location">UK Polar Network ECC (online)</span>
+        <span itemprop="location">GloSAT Project Meeting (online), NOC, UK</span>
       </div>
     </div>
     <div class="btn-links">
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2022_GloSAT_WP3_outreach.pdf" target="_blank" rel="noopener">
         PDF
       </a>
     </div>
   </div>
   <div class="ml-3">
-    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf">
-      <img src="/talk/budyko-calculation/featured.png" itemprop="image" target="_blank" rel="noopener">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2022_GloSAT_WP3_outreach.pdf">
+      <img src="/talk/lek-homogenisation/featured.png" itemprop="image" target="_blank" rel="noopener">
     </a>
   </div>
 </div>
@@ -1081,18 +1081,35 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>Rate of retreat of the Arctic sea-ice boundary from reanalysis</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP1 sea-ice reanalysis
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          May 5, 2021            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">UK Polar Network ECC (online)</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf">
+      <img src="/talk/budyko-calculation/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
 
 
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
