--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
           Oct 13, 2022            
         </span>
         <span class="middot-divider"></span>
-        <span itemprop="location">University of York, UK</span>
+        <span itemprop="location">GloSAT Project Meeting, University of York, UK</span>
       </div>
     </div>
     <div class="btn-links">
@@ -1053,6 +1053,37 @@
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
   <div class="media-body">
     <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>Estimating normals for series without normals (Part II)</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP1 climatological normal estimation (II)
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          Jul 13, 2021            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">GloSAT Project Meeting (online), NOC, UK</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2021_Jul13_GloSAT_WP1_no-baselines-2.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2021_Jul13_GloSAT_WP1_no-baselines-2.pdf">
+      <img src="/talk/lek-no-baselines-2/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
+
+
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
       <a>How good is 20th Century Reanalysis at recreating observations during the Ulysses Storm >100 years ago</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
@@ -1064,7 +1095,7 @@
           May 25, 2021            
         </span>
         <span class="middot-divider"></span>
-        <span itemprop="location">CRU/UEA Datasets Meeting (online)</span>
+        <span itemprop="location">CRU/UEA Datasets Meeting (online), Norwich, UK</span>
       </div>
     </div>
     <div class="btn-links">
@@ -1095,7 +1126,7 @@
           May 5, 2021            
         </span>
         <span class="middot-divider"></span>
-        <span itemprop="location">UK Polar Network ECC (online)</span>
+        <span itemprop="location">UK Polar Network ECC (online), BAS, UK</span>
       </div>
     </div>
     <div class="btn-links">
@@ -1107,6 +1138,68 @@
   <div class="ml-3">
     <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_GloSAT_seaice_reanalysis_UKpolarECC.pdf">
       <img src="/talk/budyko-calculation/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
+
+
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>Estimating normals for series without normals (Part I): short-segment model</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP1 climatological normal estimation (I)
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          May 4, 2021            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">GloSAT Project Meeting (online), NOC, UK</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_May4-no-baselines-1.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_May4-no-baselines-1.pdf">
+      <img src="/talk/lek-no-baselines-1/featured.png" itemprop="image" target="_blank" rel="noopener">
+    </a>
+  </div>
+</div>
+
+
+<div class="media stream-item" itemscope itemtype="http://schema.org/Event">
+  <div class="media-body">
+    <h3 class="article-title mb-0 mt-0" itemprop="name">
+      <a>Blended global temperatures versus global surface air temperature: a view from reanalysis</a>
+    </h3>
+    <div class="article-style" itemprop="articleBody">
+      NERC GloSAT WP1 blended reanalysis
+    </div>
+    <div class="stream-meta article-metadata">
+      <div>
+        <span itemprop="startDate">
+          Nov 23, 2020            
+        </span>
+        <span class="middot-divider"></span>
+        <span itemprop="location">GloSAT Project Meeting (online), NOC, UK</span>
+      </div>
+    </div>
+    <div class="btn-links">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2020_Nov23_WP1_blended_reanalysis.pdf" target="_blank" rel="noopener">
+        PDF
+      </a>
+    </div>
+  </div>
+  <div class="ml-3">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2020_Nov23_WP1_blended_reanalysis.pdf">
+      <img src="/talk/glosat-blended-reanalysis/featured.png" itemprop="image" target="_blank" rel="noopener">
     </a>
   </div>
 </div>
