--- a/index.html
+++ b/index.html
@@ -1068,13 +1068,13 @@
       </div>
     </div>
     <div class="btn-links">
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2021_Jul13_GloSAT_WP1_no-baselines-2.pdf" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_Jul13_GloSAT_WP1_no-baselines-2.pdf" target="_blank" rel="noopener">
         PDF
       </a>
     </div>
   </div>
   <div class="ml-3">
-    <a href="https://github.com/patternizer/pdf-archive/blob/master/pdfs/2021_Jul13_GloSAT_WP1_no-baselines-2.pdf">
+    <a href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/2021_Jul13_GloSAT_WP1_no-baselines-2.pdf">
       <img src="/talk/lek-no-baselines-2/featured.png" itemprop="image" target="_blank" rel="noopener">
     </a>
   </div>
