--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://glosat.org/" target="_blank" rel="noopener" itemprop="url">GloSAT LAT</a>
+    <a href="https://glosat.org/" target="_blank" rel="noopener" itemprop="url">GloSAT Project</a>
   </span>
   <p class="project-summary">Global land surface air temperature acquisition update to CRUTEM5 and local expectation Kriging (LEK) for 1781-2022</p>
 </div>
@@ -797,7 +797,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/glosat-analysis-station-validation" target="_blank" rel="noopener" itemprop="url">GloSAT LAT</a>
+    <a href="https://github.com/patternizer/glosat-analysis-station-validation" target="_blank" rel="noopener" itemprop="url"> GloSAT analysis vs station validation</a>
   </span>
   <p class="project-summary">Comparison of monthly 5x5 gridded GloSAT in-filled analysis with local expectation Kriging (LEK)-updated station anomaliesm. The monthly value of the North Atlantic Oscillation (NAO) as well as the sequential monthly analysis structural similarity (SSIM) is provided.</p>
 </div>
