Added GloSAT HCA analysis codebase

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
   <span class="project-title">
     <a href="https://glosat.org/" target="_blank" rel="noopener" itemprop="url">GloSAT Project</a>
   </span>
-  <p class="project-summary">Global land surface air temperature acquisition update to CRUTEM5 and local expectation Kriging (LEK) for 1781-2022</p>
+  <p class="project-summary">Land component: global land surface air temperature acquisition update to CRUTEM5 and local expectation Kriging (LEK) for 1781-2022</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
@@ -800,6 +800,14 @@
     <a href="https://github.com/patternizer/glosat-analysis-station-validation" target="_blank" rel="noopener" itemprop="url"> GloSAT analysis vs station validation</a>
   </span>
   <p class="project-summary">Comparison of monthly 5x5 gridded GloSAT in-filled analysis with local expectation Kriging (LEK)-updated station anomaliesm. The monthly value of the North Atlantic Oscillation (NAO) as well as the sequential monthly analysis structural similarity (SSIM) is provided.</p>
+</div>
+
+<div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/glosat-hca" target="_blank" rel="noopener" itemprop="url"> GloSAT hierarchical cluster/halo analysis</a>
+  </span>
+  <p class="project-summary">Hierarchical cluster analysis optimisation of the global land surface temperature station archive using agglomerative clustering and a maximum cluster membership constraint with halo boundary analysis</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-ncc" itemscope itemtype="http://schema.org/CreativeWork">
