--- a/index.html
+++ b/index.html
@@ -810,6 +810,14 @@
   <p class="project-summary">Hierarchical cluster analysis optimisation of the global land surface temperature station archive using agglomerative clustering and a maximum cluster membership constraint with halo boundary analysis</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/glosat-breakpoint-analysis" target="_blank" rel="noopener" itemprop="url"> GloSAT breakpoint analysis</a>
+  </span>
+  <p class="project-summary">Algorithm to calculate breakpoints in local expectation Krigining output CUSUM timeseries of station monthly averaged surface temperature</p>
+</div>
+
 <div class="col-lg-12 project-item isotope-item js-id-ncc" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
