--- a/index.html
+++ b/index.html
@@ -797,9 +797,9 @@
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://github.com/patternizer/glosat-analysis-station-validation" target="_blank" rel="noopener" itemprop="url"> GloSAT analysis vs station validation</a>
+    <a href="https://github.com/patternizer/glosat-analysis-station-validation" target="_blank" rel="noopener" itemprop="url"> GloSAT reference analysis vs station validation</a>
   </span>
-  <p class="project-summary">Comparison of monthly 5x5 gridded GloSAT in-filled analysis with local expectation Kriging (LEK)-updated station anomaliesm. The monthly value of the North Atlantic Oscillation (NAO) as well as the sequential monthly analysis structural similarity (SSIM) is provided.</p>
+  <p class="project-summary">Comparison of monthly 5x5 gridded GloSAT in-filled reference analysis with local expectation Kriging (LEK)-updated station anomaliesm. The monthly value of the North Atlantic Oscillation (NAO) as well as the sequential monthly analysis structural similarity (SSIM) is provided.</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
