--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
   <span class="project-title">
     <a href="https://glosat.org/" target="_blank" rel="noopener" itemprop="url">GloSAT Project</a>
   </span>
-  <p class="project-summary">Land component: global land surface air temperature acquisition update to CRUTEM5 and local expectation Kriging (LEK) for 1781-2022</p>
+  <p class="project-summary">Land component: global land surface air temperature acquisition update to CRUTEM5 and local expectation Kriging (LEK) to update climatological normals for global stations 1781-2022</p>
 </div>
 
 <div class="col-lg-12 project-item isotope-item js-id-glosat" itemscope itemtype="http://schema.org/CreativeWork">
