Added CMIP6 UTCI project codebase

--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-glosat" class="btn btn-primary btn-lg">NERC GloSAT</a>
                 <a href="#" data-filter=".js-id-ncc" class="btn btn-primary btn-lg">NCC Climate Mural for our Times</a>
+                <a href="#" data-filter=".js-id-cmip" class="btn btn-primary btn-lg">CMIP6 Hackathon UTCI</a>
                 <a href="#" data-filter=".js-id-fiduceo" class="btn btn-primary btn-lg">H2020 FIDUCEO</a>
                 <a href="#" data-filter=".js-id-sst" class="btn btn-primary btn-lg">ESA SST_CCI</a>
                 <a href="#" data-filter=".js-id-ozone" class="btn btn-primary btn-lg">ESA Ozone_CCI</a>
@@ -817,6 +818,14 @@
   </span>
   <p class="project-summary">Algorithm to calculate breakpoints in local expectation Krigining output CUSUM timeseries of station monthly averaged surface temperature</p>
 </div>
+
+<div class="col-lg-12 project-item isotope-item js-id-cmip" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://github.com/patternizer/cmip6hackathon-utci" target="_blank" rel="noopener" itemprop="url">CMIP6 Hackathon UTCI</a>
+  </span>
+  <p class="project-summary">CMIP6 Hackathon UTCI code developed with colleagues from the <a href="https://cmip6moap.github.io/projects/10-human-heat-stress-warming-world/">Project 10</a> team </p>
+</div>      
 
 <div class="col-lg-12 project-item isotope-item js-id-ncc" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
