--- a/index.html
+++ b/index.html
@@ -316,10 +316,13 @@
 	  I computed the climate stripes for the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a> in collaboration with local artist Gennadiy Ivanov, CRU, Global Water Futures and the Transitions Art-Science project 
 	  gifted to Norwich City Council and permanently installed in the Council Chamber. 
 	  </br>
+	  </br>
 	  I am producing a <a href="https://patternizer.github.io/cussh-app/dashboard-beta" target="_blank">dashboard</a> for the <a href="https://www.ucl.ac.uk/bartlett/environmental-design/research-projects/2023/nov/complex-urban-systems-sustainability-and-health-cussh" target="_blank">CUSSH Cities</a> project
 	  </br>	  
+	  </br>
 	  I am currently producing a Global Wildfire Atlas with the support of a UEA PVC Impact Study Award.
 	  </br>	  
+	  </br>
 	  My open source code is on <a href="https://github.com/patternizer" target="_blank">Github</a>.
 		  			
             </div>
@@ -825,7 +828,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-cussh" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer.github.io/cussh-app/dashboard-beta.html" target="_blank" rel="noopener" itemprop="url">CUSSH Cities dashboard"</a>
+    <a href="https://patternizer.github.io/cussh-app/dashboard-beta.html" target="_blank" rel="noopener" itemprop="url">CUSSH Cities dashboard</a>
   </span>
   <p class="project-summary">CUSSH Cities dashboard containing CMIP6 historical and SSP projections for ETCCDI and HSI indices from multiple climate model runs bias-adjusted with observations from JRA-55 and/or GPCC-FDD</p>
 </div>      
@@ -833,7 +836,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-fire_atlas" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer.github.io/cussh-app/dashboard-beta.html" target="_blank" rel="noopener" itemprop="url">Global Wildfire Atlas"</a>
+    <a href="https://patternizer.github.io/cussh-app/dashboard-beta.html" target="_blank" rel="noopener" itemprop="url">Global Wildfire Atlas</a>
   </span>
   <p class="project-summary">UEA PVC Impact Study to produce a prototype Global Wildfire Atlas per IPCC AR6 land region for a number of fire parameters retrieved from MODIS</p>
 </div>      
@@ -1043,7 +1046,7 @@
       <a>RMetS Data Rescue: Discovery and Recovery of Historic Climate Observations</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
-      Live webcast of my talk is available on <a href=https://www.youtube.com/watch?v=hDQEvxeU3Mg>Youtube</a> (1:09:18 - 1:45:35). 
+      Extending the GloSAT land surface temperature record 
     </div>
     <div class="stream-meta article-metadata">
       <div>
@@ -1055,9 +1058,12 @@
       </div>
     </div>
     <div class="btn-links">
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/mtaylor-rmets-data-rescue-v9-lowres" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/mtaylor-rmets-data-rescue-v9-lowres.pdf" target="_blank" rel="noopener">
         PDF
       </a>
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=hDQEvxeU3Mg=4158s" target="_blank" rel="noopener">
+        Recording
+      </a>      
     </div>
   </div>
   <div class="ml-3">
@@ -1066,15 +1072,6 @@
     </a>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
 
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
   <div class="media-body">
