--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@
                 <a href="#" data-filter="*" class="btn btn-primary btn-lg active">All</a>
                 <a href="#" data-filter=".js-id-glosat" class="btn btn-primary btn-lg">NERC GloSAT</a>
                 <a href="#" data-filter=".js-id-ncc" class="btn btn-primary btn-lg">NCC Climate Mural for our Times</a>
+                <a href="#" data-filter=".js-id-age_of_mammals_app" class="btn btn-primary btn-lg">Age of Mammals App</a>
                 <a href="#" data-filter=".js-id-cussh" class="btn btn-primary btn-lg">CUSSH Cities</a>
                 <a href="#" data-filter=".js-id-fire_atlas" class="btn btn-primary btn-lg">Global Wildfire Atlas</a>
                 <a href="#" data-filter=".js-id-cmip" class="btn btn-primary btn-lg">CMIP6 Hackathon UTCI</a>
@@ -824,6 +825,13 @@
   <p class="project-summary">Algorithm to calculate breakpoints in local expectation Krigining output CUSUM timeseries of station monthly averaged surface temperature</p>
 </div>
 
+<div class="col-lg-12 project-item isotope-item js-id-age_of_mammals_app" itemscope itemtype="http://schema.org/CreativeWork">
+  <i class="far fa-copy pub-icon" aria-hidden="true"></i>
+  <span class="project-title">
+    <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">~Age of Mammals App</a>
+  </span>
+  <p class="project-summary">Plotly python interactive app for global mean temperatures from 65.5 million years ago until the year 2200 colour-coded relative to Paris Agreement 2015 targets</p>
+</div>      
 
 <div class="col-lg-12 project-item isotope-item js-id-cussh" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
@@ -1046,7 +1054,7 @@
       <a>RMetS Data Rescue: Discovery and Recovery of Historic Climate Observations</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
-      Extending the GloSAT land surface temperature record 
+      Extending the GloSAT land surface temperature record
     </div>
     <div class="stream-meta article-metadata">
       <div>
@@ -1061,7 +1069,7 @@
       <a class="btn btn-outline-primary my-1 mr-1" href="https://raw.githubusercontent.com/patternizer/pdf-archive/master/pdfs/mtaylor-rmets-data-rescue-v9-lowres.pdf" target="_blank" rel="noopener">
         PDF
       </a>
-      <a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=hDQEvxeU3Mg=4158s" target="_blank" rel="noopener">
+      <a class="btn btn-outline-primary my-1 mr-1" href="https://youtu.be/hDQEvxeU3Mg?feature=shared&t=4158" target="_blank" rel="noopener">
         Recording
       </a>      
     </div>
