--- a/index.html
+++ b/index.html
@@ -314,13 +314,16 @@
        
       I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project to estimate how the global climate has changed over the industrial era.
 	  I computed the climate stripes for the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a> in collaboration with local artist Gennadiy Ivanov, CRU, Global Water Futures and the Transitions Art-Science project 
-	  gifted to Norwich City Council and permanently installed in the Council Chamber. 
+	  gifted to Norwich City Council and permanently installed in the Council Chamber. Check out the interactive <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank">Age of Mammals app</a> to view the raw data for the Cenozoic Era with climate model forecasts out to 2200 CE.
 	  </br>
 	  </br>
 	  I am producing a <a href="https://patternizer.github.io/cussh-app/dashboard-beta" target="_blank">dashboard</a> for the <a href="https://www.ucl.ac.uk/bartlett/environmental-design/research-projects/2023/nov/complex-urban-systems-sustainability-and-health-cussh" target="_blank">CUSSH Cities</a> project
 	  </br>	  
 	  </br>
-	  I am currently producing a Global Wildfire Atlas with the support of a UEA PVC Impact Study Award.
+	  I am producing a Global Wildfire Atlas with the support of a UEA PVC Impact Study Award.
+	  </br>	  
+	  </br>
+	  I am producing a climate board game (watch this space)!.
 	  </br>	  
 	  </br>
 	  My open source code is on <a href="https://github.com/patternizer" target="_blank">Github</a>.
@@ -828,7 +831,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-age_of_mammals_app" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">~Age of Mammals App</a>
+    <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank" rel="noopener" itemprop="url">Age of Mammals App</a>
   </span>
   <p class="project-summary">Plotly python interactive app for global mean temperatures from 65.5 million years ago until the year 2200 colour-coded relative to Paris Agreement 2015 targets</p>
 </div>      
