Added link to live Heroku Age of Mammals App

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and computed climate stripes for the Age of Mammals from 66 million years ago for 
 	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like gravel biking, 
 	  playing blindfold chess and learning new grooves on a big surdo. I have autism and am not a puzzle to be solved although <a href="https://patternizer.github.io/img/impossible-jigsaw.jpg" target="_blank">this</a> might help.
+	  Usually found coding listening to the Radio Bemba Sound System.
 	  </p>
 	        
     <div class="row">
@@ -1054,7 +1055,7 @@
 <div class="media stream-item" itemscope itemtype="http://schema.org/Event">
   <div class="media-body">
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a>RMetS Data Rescue: Discovery and Recovery of Historic Climate Observations</a>
+      <a>RMetS Data Rescue: Discovery and recovery of historic climate observations</a>
     </h3>
     <div class="article-style" itemprop="articleBody">
       Extending the GloSAT land surface temperature record
