Updated link to global wildfire atlas

--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
 <div class="col-lg-12 project-item isotope-item js-id-fire_atlas" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
   <span class="project-title">
-    <a href="https://patternizer.github.io/fire-atlas-app/ar6.land-no-ocean-BA_Total-yearly.html" target="_blank" rel="noopener" itemprop="url">Global Wildfire Atlas</a>
+    <a href="https://patternizer.github.io/fire-atlas-app/global-wildfire-atlas-yearly.html" target="_blank" rel="noopener" itemprop="url">Global Wildfire Atlas</a>
   </span>
   <p class="project-summary">UEA PVC Impact Study to produce a prototype Global Wildfire Atlas per IPCC AR6 land region for a number of fire parameters retrieved from MODIS</p>
 </div>      
