--- a/index.html
+++ b/index.html
@@ -314,14 +314,16 @@
             <div class="card-text">
        
       I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project to estimate how the global climate has changed over the industrial era.
+	  </br>
+	  </br>
 	  I computed the climate stripes for the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a> in collaboration with local artist Gennadiy Ivanov, CRU, Global Water Futures and the Transitions Art-Science project 
-	  gifted to Norwich City Council and permanently installed in the Council Chamber. Check out the interactive <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank">Age of Mammals app</a> to view the raw data for the Cenozoic Era with climate model forecasts out to 2200 CE.
+	  gifted to Norwich City Council and permanently installed in the Council Chamber. Check out my interactive <a href="https://ncc-stripes-app-99ed067aff9e.herokuapp.com/" target="_blank">Age of Mammals app</a> to view the raw data for the Cenozoic Era with climate model forecasts out to 2200 CE.
 	  </br>
 	  </br>
-	  I am producing a <a href="https://patternizer.github.io/cussh-app/dashboard-beta" target="_blank">dashboard</a> for the <a href="https://www.ucl.ac.uk/bartlett/environmental-design/research-projects/2023/nov/complex-urban-systems-sustainability-and-health-cussh" target="_blank">CUSSH Cities</a> project
+	  I produced a <a href="https://patternizer.github.io/cussh-app/dashboard-beta" target="_blank">dashboard</a> with CMIP6 projections for ETCCDI and Heat Stress Indices for the <a href="https://www.ucl.ac.uk/bartlett/environmental-design/research-projects/2023/nov/complex-urban-systems-sustainability-and-health-cussh" target="_blank">CUSSH Cities</a> project
 	  </br>	  
 	  </br>
-	  I am producing a Global Wildfire Atlas with the support of a UEA PVC Impact Study Award.
+	  I am producing a <a href="https://patternizer.github.io/fire-atlas-app/global-wildfire-atlas-yearly.html" target="_blank">Global Wildfire Atlas</a> with the support of a UEA PVC Impact Study Award.
 	  </br>	  
 	  </br>
 	  I am producing a climate board game (watch this space)!.
