Updated status to visiting fellow

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
   <link rel="canonical" href="https://patternizer.github.io/">
-<!--  <meta property="twitter:card" content="summary">
-  <meta property="twitter:site" content="@MichaelTaylorEO">
-  <meta property="twitter:creator" content="@MichaelTaylorEO">
--->  
   <meta property="og:site_name" content="Patternizer">
   <meta property="og:url" content="https://patternizer.github.io/">
   <meta property="og:title" content="Patternizer">
@@ -70,7 +66,6 @@
 <nav class="navbar navbar-light fixed-top navbar-expand-lg py-0" id="navbar-main">
   <div class="container">    
       <a class="navbar-brand" href="/"><img src="/authors/admin/patternizer_250x250.jpg" alt="Patternizer"></a>  
-<!--      <a class="navbar-brand" href="/"><img src="/img/avatar.png" alt="Patternizer"></a> -->
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fas fa-bars"></i></span>
@@ -125,8 +120,8 @@
     <div class="col-12 col-lg-8">
       <p><strong>CURRENT WORK</strong>: 
 	  
-	  I work at 
-	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> on the 
+	  I am a visiting fellow at 
+	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> working on the 
 	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. 
 	  </p>
 
@@ -221,11 +216,10 @@
       <a href="https://research.reading.ac.uk/fiduceo/" target="_blank">H2020 FIDUCEO</a>,
       <a href="https://climate.esa.int/en/projects/sea-surface-temperature/" target="_blank">ESA SST_CCI</a>, and
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.
-      I am working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
-	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and computed climate stripes for the Age of Mammals from 66 million years ago for 
-	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like gravel biking, 
-	  playing blindfold chess and learning new grooves on a big surdo. I have autism and am not a puzzle to be solved although <a href="https://patternizer.github.io/img/impossible-jigsaw.jpg" target="_blank">this</a> might help.
-	  Usually found coding listening to the Radio Bemba Sound System.
+      I am a visiting fellow working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
+	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and producing climate data web applications. I computed climate stripes for the Age of Mammals from 66 million years ago for 
+	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like cycling. Once upon a time I represented Hong Kong in the World
+	  Junior Chess Championships in Adelaide 1988. I have autism.
 	  </p>
 	        
     <div class="row">
