--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title exp-title text-muted mt-0 mb-1">Senior Research Associate</h4>
-            <h4 class="card-title exp-company text-muted my-0"><a href="https://research-portal.uea.ac.uk/en/persons/michael-taylor" target="_blank" rel="noopener">Climatic Research Unit, School of Environmental Sciences, University of East Anglia</a></h4>
+            <h4 class="card-title exp-company text-muted my-0"><a href="https://www.uea.ac.uk/climate/past-future" target="_blank" rel="noopener">Climatic Research Unit, School of Environmental Sciences, University of East Anglia</a></h4>
             <div class="text-muted exp-meta">
 
               Aug 2020 – present
