Update journal article page

--- a/publication/2024-ijoc-exposure-bias/index.html
+++ b/publication/2024-ijoc-exposure-bias/index.html
@@ -222,7 +222,7 @@ Larger adjustments were estimated regionally: up to −0.57°C annually and
 
 <div class="btn-links mb-3">
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://www.cell.com/action/showPdf?pii=S2590-3322%2823%2900546-8" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://rmets.onlinelibrary.wiley.com/doi/epdf/10.1002/joc.8401" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -351,7 +351,7 @@ Larger adjustments were estimated regionally: up to −0.57°C annually and
 
 <div class="btn-links mb-3">
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://www.cell.com/action/showPdf?pii=S2590-3322%2823%2900546-8" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://rmets.onlinelibrary.wiley.com/doi/epdf/10.1002/joc.8401" target="_blank" rel="noopener">
   PDF
 </a>
 
