Update blurb and links to Wallis et al 2024

--- a/index.html
+++ b/index.html
@@ -1703,35 +1703,9 @@
 
     <div class="article-style" itemprop="articleBody">
 
-Exposure biases are a pervasive non-climatic change in land air temperature
-records which have been introduced as a result of changes in the way thermometers 
-were sheltered from solar radiation and the elements over time. Exposure
-biases have not been widely accounted for in observational records, due to difficulties 
-detecting/correcting the bias using traditional homogenisation techniques; therefore, 
-exposure biases still contribute significant uncertainty to the
-early period in global temperature compilations. Here, an empirical approach to
-address the bias arising from the introduction of Stevenson-type screens from
-the late-19th century is presented. The approach consists of: (1) an empirical
-analysis of 54 parallel measurement series to identify the characteristics of the
-exposure bias in four exposure classes; (2) the development of bias-estimation
-models based on an analysis of which variables influence the bias; and (3)
-the application of the models to an extended version of CRUTEM5 (CRUTEM5_ext), 
-based on exposure metadata, to quantify and reduce the bias.
-Step one identified differences between the temperatures recorded in Stevenson
-screens and early exposures, which vary seasonally, diurnally, and with location
-and exposure class. The largest biases (in mean temperatures) were found in
-freestanding exposures (up to −0.78°C annually) and in summer, while the
-smallest biases were generally found in wall-mounted exposures (near-0°C
-annually) and in winter. Significant relationships between the bias and temperature, 
-downward top of atmosphere and/or received shortwave downward solar
-radiation were found in each exposure class and led to the development of three
-regression-based bias-estimation models. Application of these models to 1960
-mid-latitude stations in CRUTEM5_ext, resulted in small (≤0.016°C) positive
-adjustments to the Northern Hemisphere mid-latitude mean before 1880, and
-larger (≤−0.1°C) negative adjustments to the Northern and Southern Hemisphere 
-mid-latitude means between 1882–1934 and 1856–1900, respectively.
-Larger adjustments were estimated regionally: up to −0.57°C annually and
-−0.79°C seasonally in individual grid cells.
+This extensive paper combines empirical models of exposure bias and exposure metadata to 
+estimate adjustments needed to make pre-Stevenson screen temperatures 
+compatible with later temperatures observed in Stevenson Screens.
             
     </div>
     
@@ -1761,9 +1735,6 @@ Larger adjustments were estimated regionally: up to −0.57°C annually and
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/joc.8401" target="_blank" rel="noopener">
   PDF
 </a>
-
-
-
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
         data-filename="/publication/2024-ijoc-exposure-bias/cite.bib">
