Updated CRU/UEA contract end date

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <a href="https://climate.esa.int/en/projects/sea-surface-temperature/" target="_blank">ESA SST_CCI</a>, and
       <a href="https://climate.copernicus.eu/evaluation-and-quality-control-observations" target="_blank">C3S EQCO</a> projects.
       I am a visiting fellow working on the <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project at 
-	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and producing climate data web applications. I computed climate stripes for the Age of Mammals from 66 million years ago for 
+	   <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> and producing climate data records and web applications. I computed climate stripes for the Age of Mammals from 66 million years ago for 
 	  the <a href="https://crudata.uea.ac.uk/cru/climate-mural/" target="_blank">Climate Mural for our Times</a>. I am fluent in Greek and Spanish and like cycling. Once upon a time I represented Hong Kong in the World
 	  Junior Chess Championships in Adelaide 1988. I have autism.
 	  </p>
@@ -299,7 +299,7 @@
             <h4 class="card-title exp-company text-muted my-0"><a href="https://www.uea.ac.uk/climate/past-future" target="_blank" rel="noopener">Climatic Research Unit, School of Environmental Sciences, University of East Anglia</a></h4>
             <div class="text-muted exp-meta">
 
-              Aug 2020 – present
+              Aug 2020 – July (end) 2024
               
                 <span class="middot-divider"></span>
                 <span>UK</span>
