--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
       <p>Scientist, UK</p>
     </div>
     <div class="col-12 col-lg-8">
-      <p><strong>RECENT POST</strong>: 	  
-	  Senior Research Associate at 
-	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">CRU/UEA</a> working on the 
+      <p><strong>LAST ACADEMIC POST</strong>: 	  
+	  Senior Research Associate in the  
+	  <a href="https://www.uea.ac.uk/climate/past-future" target="_blank">Climatic Research Unit (CRU)</a> working on the 
 	  <a href="https://www.glosat.org/" target="_blank">GloSAT</a> project. 
 	  </p>
 
@@ -151,7 +151,7 @@
       
       <div class="portrait-title">
         <h2 itemprop="name">Michael Taylor</h2>
-        <h3 itemprop="jobTitle">Scientist, UK</h3> 
+        <h3 itemprop="jobTitle">Climate Data Scientist, UK</h3> 
 <!--              
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <a href="https://www.uea.ac.uk/climate/past-future" target="_blank" itemprop="url" rel="noopener">
