--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       Since that tine I have been worked in the fields of climate data records production, curation and QC, satellite remote sensing, applied statistics and machine learning. 
       I am a member of the <a href="https://www.mariecuriealumni.eu/" target="_blank">Marie-Curie Alumni Association</a> and learned Greek and Spanish while working abroad. 
       Once upon a time, when chess was still a human sport, I represented Hong Kong in the World Junior Chess Championships in Adelaide 1988 (and met my first wild kangaroo), 
-      had my ass handed to me twice (!!) on d7 by Miguel Najdorf, and organised a 33-player simul in Athens with women's world champion Alexandra Kosteniuk. Those were the days.
+      got taught a lesson twice (!!) on the same square d7 by Miguel Najdorf, and organised a 33-player simul in Athens with women's world champion Alexandra Kosteniuk. Those were the days.
 	  </p>
 	        
     <div class="row">
