--- a/index.html
+++ b/index.html
@@ -223,10 +223,9 @@
         <h3>Interests</h3>
         <ul class="ul-interests">
           
-          <li>Climate data records</li>          
-          <li>Palaeoclimate</li>          
+          <li>Dataviz</li>          
+          <li>Climate data records</li>
           <li>Machine learning</li>
-          <li>Applied statistics</li>
 
         </ul>
       </div>
