Added GSD 2025 publication

--- a/index.html
+++ b/index.html
@@ -1760,7 +1760,7 @@
   </div>
   <div class="ml-3">
     <a href="/publication/2025-gsd-lek/">
-      <img src="/publication/2025-hsd-lek/featured.jpg" itemprop="image">
+      <img src="/publication/2025-hsd-lek/featured.png" itemprop="image">
     </a>    
   </div>
 </div>
