Added GSD 2025 publication

--- a/index.html
+++ b/index.html
@@ -1759,7 +1759,7 @@
     </div>  
   </div>
   <div class="ml-3">
-    <a href="/publication/2025-gsd-lek/">
+    <a href="/publication/2025-gsd-lek/featured.png">
       <img src="/publication/2025-hsd-lek/featured.png" itemprop="image">
     </a>    
   </div>
