Added GSD 2025 publication

--- a/index.html
+++ b/index.html
@@ -1759,8 +1759,8 @@
     </div>  
   </div>
   <div class="ml-3">
-    <a href="/publication/2025-gsd-lek/featured.png">
-      <img src="/publication/2025-hsd-lek/featured.png" itemprop="image">
+    <a href="/publication/2025-gsd-lek/featured.jpg">
+      <img src="/publication/2025-hsd-lek/featured.jpg" itemprop="image">
     </a>    
   </div>
 </div>
