Added GSD 2025 publication

--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,9 @@
     <div class="stream-meta article-metadata">      
       <div itemprop="author">
     <span itemprop="author name" itemtype="http://schema.org/Person">
-      <a href="/authors/admin/">Michael Taylor</a></span>, 
+<!--      <a href="/authors/admin/">Michael Taylor</a></span>, 
+!-->
+      <a>Michael Taylor</a></span>, 
     <span itemprop="author name" itemtype="http://schema.org/Person">
       <a href="/authors/timothy-osborn/">Timothy J. Osborn</a></span>, 
     <span itemprop="author name" itemtype="http://schema.org/Person">
@@ -1759,7 +1761,7 @@
     </div>  
   </div>
   <div class="ml-3">
-    <a href="/publication/2025-gsd-lek/featured.jpg">
+    <a href="https://rmets.onlinelibrary.wiley.com/doi/epdf/10.1002/gdj3.70024">
       <img src="/publication/2025-gsd-lek/featured.jpg" itemprop="image">
     </a>    
   </div>
