Updated latest paper status to published

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <!-- Alert -->
   <div id="alert-bar" role="region" aria-live="polite">
     <p>
-      🚀 New paper (in press) 8 June 2025:
-      <a href="https://doi.org/10.5194/essd-2024-500" target="_blank" rel="noopener noreferrer">
-        An observational record of global gridded surface air temperature change over land and ocean from 1781.
+      🚀 New paper, 15 December 2025:
+      <a href="https://doi.org/10.5194/essd-17-7079-2025" target="_blank" rel="noopener noreferrer">
+        An observational record of global gridded near-surface air temperature change over land and ocean from 1781.
       </a>
     </p>
     <button id="alert-dismiss" aria-label="Dismiss alert" type="button">×</button>
